# StoryMaster

./: .coverage  .env.example  .gitignore  CHANGELOG.md  README.md  TESTLOG.md  __init__.py  agent_examples.py  audit-report-565deb31-1fc9-474f-9777-881f19789721-1763962707801.json  examples.py  main.py  pyproject.toml  requirements.txt  run.py  validate.py
agent/: communication.py  core.py  interfaces.py  react.py  reasoning.py
agent/tools/: __init__.py  rulebook_parser.py
agent_orchestration/: __init__.py  communication.py  config.py  core.py  execution.py  interfaces.py  monitoring.py  react.py  reasoning.py  tools.py
agent_orchestration/tools/: __init__.py  rulebook_parser.py
api/: __init__.py
api/v1/: __init__.py  characters.py  dm.py  health.py  providers.py  rulebooks.py
configs/provider_profiles/: active_profile.json  deepseek.json  openai.json  openai_compatible.json
core/: __init__.py  config.py  database.py  exceptions.py  logging.py  schema_manager.py
data_storage/: __init__.py  interfaces.py  rulebook_manager.py
data_storage/adapters/: __init__.py  filesystem_adapter.py  neo4j_adapter.py  redis_adapter.py
data_storage/config/: __init__.py  config_loader.py  config_manager.py  config_validator.py
data_storage/factory/: __init__.py  manager_factory.py  repository_factory.py  storage_factory.py
data_storage/interfaces/: session_persistence.py
data_storage/managers/: __init__.py  cache_manager.py  instantiation_manager.py
data_storage/repositories/: __init__.py  entity_repository.py  instance_repository.py  relationship_repository.py  rollback_repository.py  session_repository.py  snapshot_repository.py  template_repository.py
model_adapter/: __init__.py  base.py  factory.py  interfaces.py  scheduler.py
model_adapter/adapters/: anthropic.py  anthropic_models.json  ollama.py  openrouter.py
models/: character_creation_models.py  dm_models.py  dynamic_entity.py  dynamic_factory.py  parsing_models.py  provider_setup_models.py  rulebook_models.py  session_persistence_models.py
provider/: __init__.py  base.py  entities.py  func_tool_manager.py  interfaces.py  manager.py  manager_factory.py  profile_manager.py  provider.py  register.py
provider/sources/: __init__.py  anthropic_models.json  anthropic_source.py  ollama_source.py  openai_compatible_source.py  openai_source.py  openrouter_source.py
schemas/: __init__.py
services/: __init__.py  character_creation_generator.py  character_creation_validator.py  character_manager.py  file_processor.py  parsing_task_manager.py  provider_setup_service.py  rule_calculator.py  schema_converter.py
services/dm/: __init__.py  dm_agent.py  entity_extractor.py  input_classifier.py  memory_managers.py  npc_agent.py  npc_emotion_system.py  npc_memory_system.py  npc_pool.py  response_generator.py  task_dispatcher.py  time_manager.py
services/dm/session_persistence/: __init__.py  cache_keys.py  conflict_detector.py  rollback_service.py  serializer.py  session_lock.py  session_persistence_service.py  snapshot_service.py
services/integrations/: rulebook_parser_integration.py
